Uppdaterat och brutit ut marinfrekvenserna till egen sektion och inte under allmänna frekvenser då de inte är sådana.

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -60,7 +60,7 @@ med enkla medel.
 Principen ''3-3-3'' har framlagts som en princip vi kan följa lite oavsett vilken
 kanalplan vi använder. I princip betyder det att vi lyssnar tre minuter vid
 var tredje timme på kanal 3 (eller en annan given anropskanal, för VHF marin
-är det förstås kanal 16 som gäller och för 2-metersbandet är det
+är det förstås kanal 16 som gäller och för amatörradions 2-metersband är det
 anropsfrekvensen 145,500 MHz som är lämpligast osv).
 
 Men om alla sänder och lyssnar enligt detta schema så blir det lättare att få
@@ -122,7 +122,7 @@ innan en kris uppstår. Saker som generatorer och ackumulatorbatterier som kan
 laddas (exempelvis med startkablar från bilens generator) kommer man mycket
 långt med!
 
-\section{Frekvensband}
+\section{Frekvensband i en nödsituation eller kris}
 \index{prepping!frekvensband}
 
 För de som inte har amatörradiocertifikat är egentligen följande frekvensband de mest lämpliga att försöka använda:
@@ -133,14 +133,14 @@ För de som inte har amatörradiocertifikat är egentligen följande frekvensban
 	  \bf Band & \bf Användningsområde                                                                             \\ \hline
 	    27 MHz & Vid gynnsamma förhållanden lång utbredning, men också risk för störningar                         \\
 	    69 MHz & Ett robust band men endast tillåtet i Sverige, bra markvågsutbredning                             \\
-	Flygbandet & Rekommenderas inte, AM-sändning dessutom.                                                         \\
-	 VHF-Marin & För nödsamtal nära kusten, till sjöss, eller någon av de stora insjöarna.                         \\
+	 VHF-Marin & För nödsamtal nära kusten, till sjöss, eller någon av de stora insjöarna. Kanal 16.               \\
 	   155 MHz & Jaktkanalerna, bra för lite kortare förbindelser och handapparater.                               \\
 	   444 MHz & Kortdistansradiokanalerna, begränsat med effekt men bra i urban miljö och mellan fordon.          \\
 	   446 MHz & Räckvidden är från några hundra meter till en km ungefär i terräng beroende på. Familjemedl.
 \end{tabular}}
 \caption{Lämpliga frekvensband landmobil radio.}
 \end{table}
+
 
 \begin{table}[H]
 \resizebox{\textwidth}{!}{%
