--- a/tex/forord.tex
+++ b/tex/forord.tex
@@ -1,12 +1,13 @@
 % !TeX encoding = UTF-8
 % !TeX spellcheck = sv_SE
 
-\section*{Förord}
+\section{Förord}
 
 Radiohandboken fyller 10 år i år! Den första versionen 1.0.0 publicerades på
 nätet 1:a november 2015. Det är fasen inte så illa pinkat ändå! Nu har vi
 kommit till den 11:e uppdateringen av den och den har fått ISBN och vuxit upp.
-Detta blir därför den första officiella utgåvan.
+Detta blir därför den 11:e utgåvan och i och med detta blir det utgåvenummer i
+stället för versionsnummer.
 
 Jag valt att ta bort de specifika VHF- och HF-versionerna av handboken och i
 stället bara inkludera allting i samma handbok för enkelhets skull. Jag har
@@ -43,9 +44,9 @@ Och kör radio där ute. Alltid med stil.
 Täpp-Anders Sikvall\\
 	SM5UEI
 
-\vspace{\fill}
+%\vspace{\fill}
 
-\section*{Licens}
+\section{Licens}
 
 Denna handbok är författad av Täpp-Anders Sikvall, SM5UEI. Den är
 släppt under en creative commons licens som kallas för CC BY-NC-SA 4.0.
@@ -62,3 +63,6 @@ För fullständig information kan du besöka\\
 
 Licensen gäller alla versioner av radiohandboken, alla utgåvor och
 alla utdrag ur den.
+
+%\section{Nyheter i denna utgåva}
+
