--- a/tex/kap-reglemente.tex
+++ b/tex/kap-reglemente.tex
@@ -13,25 +13,34 @@ detta kapitel.
 \section{Tillståndsfri radio}
 \index{radio!tillståndsfri}
 
-I sverige regleras radioanvändningen av Post- och telestyrelsens (PTS)
+I Sverige regleras radioanvändningen av Post- och telestyrelsens (PTS)
 bestämmelser och det gäller all radioanvändning. Delar av detta delegeras
 sedan till olika myndigheter exempelvis för marin radio och flygradio. Själva
 utrustningen som får användas för olika typer av radiosändning regleras i
 radioutrustningslagen SFS 2916:392 och det övergripande EU-direktivet
 2014/53/EU.
 
+\subsection{Undantag från tillståndsplikt}
+
+I sverige regleras all radioanvändning med sändare som inte kräver att man
+söker tillstånd för det i en skrift som ges ut av Post- och Telestyrelsen
+(PTS) och som bär namnet {\bf 'undantag från tillståndsplikt''}. Denna skrift
+uppdateras lite då och då när det finns behov av det och här regleras all
+radiotrafik som inte kräver särskilt tillstånd.
 
 Det är i undantagsföreskriften du hittar alla villkor som hänger samman med
 tillståndsfri radio\-sänd\-ning. Här står effekter, modulationstyper och
-användningsområden upptagna för respektive frekvens samt andra villkor.
+användningsområden upptagna för respektive frekvens samt andra
+villkor. Frekvenser som inte är med i samlingen där kräver alltid någon sorts
+tillstånd för att användas.
 
 Det är också i denna skrift som användningen av Amatörradio regleras rent
 juridiskt. Sedan finns inte alla rekommendationer och liknande med i denna
 skrift, här får man själv hitta det reglemente som amatörradioorganisationer
 mm kommit överens om hur man ska nyttja de olika bandet.
 
-Det innebär att radioanvändning för diverse ändamål regleras i denna skrift så
-som:
+Det innebär också att radioanvändning för diverse ändamål regleras i denna
+skrift så som:
 
 \begin{itemize}
  \item PR-radio på 27 MHz
@@ -44,34 +53,14 @@ som:
 
 En sak som är intressant är att amatörradio behandlas också i samma skrift
 trots det kräver ett godkänt avlagt prov som leder till ett
-amatörradiocertifikat. Tidigare reglerades amatörradio separat på Televerkets
-tid i en författningssamling som kallades för Televerket B:90. Denna har dock
-helt ersatts av bestämmelserna i undantagsföreskriften.
+amatörradiocertifikat. Tidigare under Televerkets tid reglerades amatörradio
+separat på i en författningssamling som kallades för B:90. Denna har dock helt
+ersatts av bestämmelserna i undantagsföreskriften.
 
 Däremot krävs det numera inget särskilt tillstånd som det gjorde tidigare för
 att få använda amatörradio, annat än att den som opererar radioutrustningen
 skall ha, eller stå under uppsikt av, en person med giltigt
 amatörradiocertifikat.
-
-\subsection{Undantag från tillståndsplikt}
-
-I sverige regleras all radioanvändning med sändare som inte kräver att man
-söker tillstånd för det i en skrift som ges ut av Post- och Telestyrelsen
-(PTS) och som bär namnet {\bf 'undantag från tillståndsplikt''}. Denna skrift
-uppdateras lite då och då när det finns behov av det och här regleras all
-radiotrafik som inte kräver särskilt tillstånd.
-
-\subsection{Banden som omfattas}
-
-Detta gäller då PR-radio, 69 MHz radio, PMR-bandet på 446 MHz och KDR-bandet
-på 444 MHz som ofta används på byggen eller säkerhetsarrangemang för arenor
-med mera liksom Jakt- och jordbruksfrekvenserna på 31 och 155 MHz med mera.
-Inget av dessa band kräver licens eller tillstånd men det krävs att man följer
-reglerna i hänseende till vad bandet är tänkt att användas till.
-
-Det finns också en rad med andra tillämpningar som går under detta dokument från
-tekniska och medicinska och mycket mer. Det rekommenderas att skumma igenom
-dokumentet då det faktiskt är ganska intressant.
 
 \subsection{Endast godkända radioapparater}
 
@@ -80,105 +69,120 @@ uppfylla villkoren och här blir det ofta en del problem med privatimporterade
 radioapparater från Asien som ibland kan ha förskräckligt dåliga sändare. Det
 är straffbart att använda icke godkänd radioutrustning.
 
+Att använda icke godkänd utrustning riskerar att störa andra användare av
+frekvenserna och det medför straffansvar.
+
 \section{Amatörradio}
 
 Amatörradio har en lång historia och sträcker sig tillbaka till radions
-barndom. Rent formellt så var det i USA i slutet av 1890-talet som radioamatörer
-började sända telegram till varandra med den teknik som fanns till buds då. Det
-blev mycket populärt bland elingenjörer och andra teknikintresserade och runt
-1910 började man få problem med interferens och störningar ochg beslutade sig
-för att formalisera det hela. Olika restriktioner infördes men i och med detta
-regelverk fick vi också vissa krav på kunskaper för att operera radiosändare.
+barndom. Rent formellt så var det i USA i slutet av 1890-talet som
+radioamatörer började sända telegram till varandra med den teknik som då stod
+till buds.
+
+Det blev snart mycket populärt bland elingenjörer och andra teknikintresserade
+och runt 1910 började man få problem med interferens och störningar ochg
+beslutade sig för att formalisera det hela. Olika restriktioner infördes men i
+och med detta regelverk fick vi också vissa krav på kunskaper för att operera
+radiosändare.
 
 \subsection{Amatörradiocertifikat HAREC}
 
-Om det fulla amatörradiocertifikatet är ett certifikat som är utformat efter de
-principer som anges i HAREC T/R 61-02, Harmonised Amateur Radio Examination
-Certificate, Vilnius 2004, uppdaterad 2014 och 2016.
+Om det fulla amatörradiocertifikatet är ett certifikat som är utformat efter
+de principer som anges i HAREC T/R 61-02, {\it Harmonised Amateur Radio
+  Examination Certificate}, Vilnius 2004, uppdaterad 2014 och 2016.
 
 Detta är ett ganska omfattande dokument och i Sverige så har vi t.ex.
-KonCEPT-boken som används för ubildning av nya radioamatörer, den kan laddas ned
-som PDF från ssa.se eller beställas som papperbok i deras webshop. För att bli
-radioamatör behöver man svara tillräckligt många rätt på två stycken delprov,
-ett teknikprov som avhandlar elektriska kretsar, radioteknik, sändare och
-mottagare, vågutbredning, eletromagnetiska fält, grundläggande matematik och
-fysik som är tillämplig, viss komponentlära, förståelse för störningar och att
-bli störd, filter och antenner mm. Det andra provet är ett prov över reglementet
-som tillämpas, både lagar och författningar som reglerar amatörradio men även
-saker som mer praktiska som exempelvis bokstaveringsalfabetet och Q-koder mm.
+\href{https://github.com/SverigesSandareamatorer/SSA-Akademin}{KonCEPT-boken}
+som används för ubildning av nya radioamatörer, den kan laddas ned som PDF
+från \url{https://ssa.se} eller beställas som papperbok i deras webshop.
 
-Ett godkänt sådant prov ger möjlighet att operera som radioamatör på
-en stor mängd olika frekvensband, alla de som i Sverige är utmärkta
-som amatörradioband.
+För att bli radioamatör behöver man svara tillräckligt många rätt på två
+stycken delprov, ett teknikprov som avhandlar elektriska kretsar, radioteknik,
+sändare och mottagare, vågutbredning, eletromagnetiska fält, grundläggande
+matematik och fysik som är tillämplig, viss komponentlära, förståelse för
+störningar och att bli störd, filter och antenner mm. Det andra provet är ett
+prov över reglementet som tillämpas, både lagar och författningar som reglerar
+amatörradio men även saker som mer praktiska som exempelvis
+bokstaveringsalfabetet och Q-koder mm.
+
+Ett godkänt sådant prov ger möjlighet att operera som radioamatör på en stor
+mängd olika frekvensband, alla de som i Sverige är utmärkta som
+amatörradioband.
 
 \subsection{Amatörradiocertifikat insteg}
 \label{sec:instegscertifikat}
 
-Instegscertifikatet är ett förenklat teknikprov men ungefär samma prov vad
-gäller reglementen osv. Det förenklade teknikprovet innebär dock en del
-begränsningar eftersom instegsamatören inte kan ges riktigt samma förtroende att
-sända på alla frekvenser. Exempelvis har man därmed begränsat de frekvensband
-som får användas till sådana som är exklusiva för amatörradio i Sverige.
+Instegscertifikatet är ett förenklat teknikprov men samma typ av frågor på
+provet vad gäller reglementet. Det förenklade teknikprovet innebär dock några
+begränsningar i effekt och vilka frekvensband som amatören har tillträde till.
+Man har hittills valt att begränsa dem till de band på kortvåg och VHF som i
+Sverige är exklusiva amatörradioband.
 
-Konskapskraven i Sverige skall motsvara det som finns i ''ECC Report 89'': \\
-\url{https://docdb.cept.org/download/409}.
+Konskapskraven i Sverige skall motsvara det som finns i
+\href{https://docdb.cept.org/download/409}{''ECC Report 89''}.
 
-PTS förväntas delegera examineringen till SSA och deras utsedda provförrättare
-och en särskild utbildningbok för instegscertet håller på att tas fram just nu
-och ska snart gå till tryck (Mars 2025).
+PTS har också delegerat examineringen till SSA och deras utsedda
+provförrättare och en särskild utbildningbok för instegscertet har nu lämnats
+för tryck samt SSA har påbörjat en vidareutbildningsbok som är tänkt att ta
+instegscertaren till ett fullt HAREC.
 
-Tyvärr fick inte SSA gehör för sin remiss att även öppna 70\,cm bandet för
-instegscertifikat. Bandet är inte länge ett exklusivt amatörband men vi delar
-det med lågeffektssändare för fjärrstyrning mm och det bör inte finnas hinder då
-fullcertare får sända med 200\,W i bandet och kan söka högeffektstillstånd på
-upp till 1\,kW.
+Tyvärr fick inte SSA gehör denna gång för sitt remissvar att även öppna
+70\,cm-bandet för instegscertifikat. Bandet är inte länge ett exklusivt
+amatörband men vi delar det med lågeffektssändare för fjärrstyrning mm och det
+bör inte finnas hinder då fullcertare får sända med 200\,W i bandet och kan
+söka högeffektstillstånd på upp till 1\,kW.
 
 Radioamatörer med instegscertifikat tilldelas anropssignaler i serien SH som
 även tidigare använts för noviser. Vid uppgradering till fullt cert får man i
-stället en signal i SA-serien är tanken.
+stället en signal i SA-serien är tanken. När man får ett instegscertifikat och
+tilldelas sin signal i SH-serien så reserveras även denna signal i SA-serien
+under de kommande tre åren. Efter det är det risk att den delas ut till någon
+annan. Det går fortfarande att uppgradera sig till HAREC men man kan då få
+helt byta anropssignal.
 
 \subsection{Amatörradioband för instegscertifikat}
 
+Instegscertifikatet ger tillträde till 4 stycken kortvågsband (HF) och 2
+stycken VHF-band enligt tabellen nedan:
+
 \begin{table}[H]
 \centering
-\begin{tabular}{rrlr}
-  \textbf{Frekvens} & \textbf{Våglängd} & \textbf{Notiser}               & \textbf{Max Effekt} \\ \hline
-              7 MHz &          40 meter &                                &           25\,W PEP \\
-             14 MHz &          20 meter & 25\,W PEP                      &                     \\
-             21 MHz &          15 meter &                                &           25\,W PEP \\
-             28 MHz &          20 meter & Liknande utbredning som 27 MHz &           25\,W PEP \\
-             50 MHz &           6 meter &                                &           25\,W PEP \\ \hline
-            144 MHz &           2 meter &                                &           25\,W ERP
-
-
+\begin{tabular}{crrr}
+  \textbf{Band} & \textbf{Frekvens} & \textbf{Våglängd} & \textbf{Effekt} \\ \hline
+   HF           & 7 MHz             & 40 meter          & 25 W PEP        \\
+   HF           & 14 MHz            & 20 meter          & 25 W PEP        \\
+   HF           & 21 MHz            & 15 meter          & 25 W PEP        \\
+   HF           & 28 MHz            & 20 meter          & 25 W PEP        \\ \hline
+   VHF          & 50 MHz            & 6 meter           & 25 W PEP        \\ 
+   VHF          & 144 MHz           & 2 meter           & 25 W ERP
 \end{tabular}
 \caption{Amatörradioband öppna för instegscertifikat i Ssverige}
 \end{table}
 
-50\,MHz är egentligen ett VHF-band men räknas ibland till kortvåg (HF) då de
-flesta amatörradiostationer för kortvåg omfattar även 6\,m-bandet.
+\clearpage
 
 Myndigheterna har gett instegscertare tillträde till amatörradioband som är
-exklusiva för amatörradio vilket innebär att ett antal populära band inte finns
-med. Arbete fortsätter på att försöka tillföra även 70 cm bandet (432--438 MHz)
-till de band som är tillåtna för instegsamatörer men det har inte kommit med i
-denna utgåva av PTS undantagsföreskrift.
+exklusiva för amatörradio vilket innebär att ett antal populära band inte
+finns med. Arbete fortsätter på att försöka tillföra även 70 cm bandet
+(432--438 MHz) till de band som är tillåtna för instegsamatörer men det har
+inte kommit med i denna utgåva av PTS undantagsföreskrift.
 
 \subsection{Effektrestriktioner instegscertifikat}
 
-På frekvensbanden 7, 14, 21, 28 och 15\,MHz tillåter man 25\,W PEP tillfört
-antennsystemet. Detta är effekten vid en key-down på morsenyckel. Antennvinsten
-är inte medräknad på dessa frekvensband.
+På frekvensbanden 7, 14, 21, 28 och 50\,MHz tillåter man 25\,W PEP tillfört
+antennsystemet. Detta är effekten ut från radions antennport vid en {\it
+  key-down} på morsenyckel. Antennvinsten är inte medräknad på dessa
+frekvensband.
 
 För 144 MHz däremot är det 25\,W ERP vilket innebär att du får mata en
 halvvågsdipol direkt med 25\,W men om du ska använda riktantenner med högre
-antennförstärkning än 0\,dBd eller 2,15\,dBi så måste du sänka sändareffekten i
-motsvarande grad.
+antennförstärkning än 0\,dBd eller 2,15\,dBi så måste du sänka sändareffekten
+i motsvarande grad.
 
 Anledningen till denna skillnad är att det är ganska svårt att bygga antenner
 med hög förstärkning, eller att bestämma dess faktiska förstärkning på
-kortvågsbanden medan det för 145\,MHz och uppåt är betydligt enklare att få till
-det och dessutom mäta och bestämma antennens förstärkning.
+kortvågsbanden medan det för 145\,MHz och uppåt är betydligt enklare att få
+till det och dessutom mäta och bestämma antennens förstärkning.
 
 \subsection{Restriktioner på utrustning för instegscertifikat}
 
@@ -188,10 +192,9 @@ till fabriksbyggd utrustning som säljs på den europeiska marknaden.
 
 \subsection{Instegscertifikat utomlands}
 
-Certifikatet äger heller ingen giltighet utomlands så som det fulla,
-HAREC-baserade, amatörradiocertifikatet gör. Du får därför i de flesta fall inte
-ta med din radiosändare till andra länder och använda den där på
-instegscertifikatet.
+Certifikatet äger heller ingen giltighet utomlands så som det fulla
+HAREC-baserade amatörradiocertifikatet gör. Du får därför normalt inte ta med
+och använda din amatörradioutrustning utomlands med denna certifikatklass.
 
 \section{Tillståndsgiven radioverksamhet}
 
@@ -224,7 +227,7 @@ tillstånd att bedriva radiotrafik.
 
 \subsection{Kommersiella radionät}
 
-Det finns också exempel på kommersiella radionät, det som tidigirare var
+Det finns också exempel på kommersiella radionät, det som tidigare var
 åkeriradionätet på 69 MHz men numera får användas rent allmänt är ett sådant
 exempel. Det finns också lokala aktörer som har exempelvis taxiradio,
 byggföretag som har allmän kommunikationsradio på sina byggen och många andra
@@ -241,17 +244,19 @@ så har dessa system numera gått samman i RAKEL (radiokommunikation för
 effektiv ledning) i ett gemensamt radionät för alla blåljustjänster. RAKEL
 tillhandahåller också visst skydd mot avlyssning som standard men kan även
 förses med stark kryptografi för att skydda särskilt känslig information, så
-kallat ''end-to-end'' krypto (E2E).
+kallat ''end-to-end'' krypto (E2EE, {\it End-to-end encryption}).
 
 RAKEL används främst av sammhällsnyttiga tjänster och myndigheter men det
 finns också exempel på när mindre aktörer och även lokaltrafik har fått
 använda nätet så det är väl använt. RAKEL kommer på sikt fasas ut till förmån
 för ett nytt kommunikationsnät som bygger på 5G-teknik via de kommersiella
 operatörernas nät i viss mån samt där det behövs egna radiobasstationer på
-700~MHz-bandet. Detta nya nät kallas ibland för SWEN (swedish emergency
+700~MHz-bandet. Detta nya nät kallas ibland för SWEN (Swedish emergency
 network) och befinner sig ännu på planeringsstadet även om prov kan komma
 ganska snart.
 
 Enligt myndigheten för samhällsskydd och beredskap (MSB) planerar man avveckla
-RAKEL till 2030 men sannolikt kommer det ta lite länge än så innan SWEN är helt
-redo att ersätta det.
+RAKEL till 2030 men sannolikt kommer det ta lite länge än så innan SWEN är
+helt redo att ersätta det.
+
+% Slutet på kapitlet
